Added feature for asyncronous endpoint call with endpoint solver check and solution
